--- a/static/style.css
+++ b/static/style.css
@@ -18,5 +18,70 @@ body {
 }
 
 #scoreboard {
-    float: left;
+    position: absolute;
+    top: 0;
+    background-color: white;
+    margin: 10px;
+    padding: 5px;
+}
+
+#lower-control-wrapper {
+    display: none;
+}
+
+#lower-controls {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 5px;
+}
+
+#side-control-wrapper {
+    display: none;
+}
+
+#side-controls {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+/* この辺のスタイルは適当なので要修正 */
+.button-lr, .button-ud, .button-hit {
+    border: 2px solid #222;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.button-lr {
+    height: 80px;    
+    flex-grow: 1;
+}
+
+.button-ud {
+    width: 80px;
+    height: 80px;
+}
+
+.button-hit {
+    flex-grow: 2;
+}
+
+@media screen and (max-width: 560px) {
+    #canvas-2d {
+        max-height: 100vh;
+    }
+
+    #side-control-wrapper {
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 0;
+    }
+
+    #lower-control-wrapper {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
 }
