--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,32 @@ body {
     flex-grow: 2;
 }
 
+#dialog-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000AA;
+    display: none;
+}
+
+#dialog {
+    background-color: white;
+    padding: 10px;
+    border: 1px solid #222;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#dialog-buttons {
+    display: flex;
+    justify-content: center;
+}
+
 @media screen and (max-width: 560px) {
     #canvas-2d {
         max-height: 100vh;
