--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
 
 #canvas-2d {
     max-width: 100%;
-    max-height: 95vh;
+    max-height: 100%;
 }
 
 #player-image {
@@ -94,10 +94,6 @@ body {
 }
 
 @media screen and (max-width: 560px) {
-    #canvas-2d {
-        max-height: 100vh;
-    }
-
     #side-control-wrapper {
         display: block;
         position: absolute;
