--- a/static/style.css
+++ b/static/style.css
@@ -19,8 +19,8 @@ body {
 
 #scoreboard {
     position: absolute;
-    top: 0;
-    background-color: white;
+    top: 100;
+    background-color:rgba(255,255,255,0.75);
     margin: 10px;
     padding: 5px;
 }
