--- a/static/style.css
+++ b/static/style.css
@@ -19,10 +19,30 @@ body {
 
 #scoreboard {
     position: absolute;
-    top: 100;
+    top: 0;
     background-color:rgba(255,255,255,0.75);
     margin: 10px;
     padding: 5px;
+
+}
+
+#graph-container{
+    position:absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFFAA;
+    display: none;
+}
+#scoregraph{
+    width: 50%;
+    height: 90%;
+    background-color: #FFFFFF;
 }
 
 #lower-control-wrapper {
